--- a/html/start.html
+++ b/html/start.html
@@ -12,17 +12,19 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+	<script src="../js/navi.js">
+
+	</script>
 </head>
 
 <body>
-	<div class="pointer">
+	<!--<div class="pointer">
 		<div class="logo" onclick="window.location.href='start.html'">
 			<img src="../img/DeluxeCar.png" />
 		</div>
 	</div>
 	<nav id="Kategorieliste">
-		<!--Navbar -->
-	</nav>
+	</nav>-->
 
 
 	<!-- Tipps zu -->
