--- a/html/produktliste.html
+++ b/html/produktliste.html
@@ -15,21 +15,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
   <script src="../js/tools.js"></script>
+  <script src="../js/navi_footer.js"></script>
 </head>
 
 <body>
-  <div class="pointer">
-    <div id="Verkauf1_Logo" class="logo" onclick="window.location.href='start.html'">
-      <img src="../img/DeluxeCar.png" />
-    </div>
-  </div>
-  <nav id="Kategorieliste">
-    <!--navbar -->
-  </nav>
-
   <div class="currentposition">
-    <h7 id="Verkauf1_Handwäsche">
-      Handwäsche
+    <h7 id="Ueberschrift">
     </h7>
   </div>
 
@@ -43,44 +34,8 @@
   <hr>
   <!-- footer -->
 
-
-  <div class="footer-basic">
-    <footer>
-      <p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
-    </footer>
-  </div>
-
-
   <script>
     $(document).ready(function() {
-
-      //AJAX for the navbar----------------------------------------------------------------------------------------------------------------
-      $.ajax({
-        url: "http://localhost:8000/api/produktkategorie/alle",
-        method: "get",
-        dataType: "json"
-      }).done(function(response) {
-        //console.log(response.daten[0].name);
-
-        var tmp = '';
-        tmp += '<ul>';
-        tmp += '<li><a class="navi" href="start.html">Startseite</a></li>';
-
-        for (i = 0; i < response.daten.length; i++) {
-          tmp += '<li><a class="navi" href="produktliste.html?kategorie=' + response.daten[i].id + '">' + response.daten[i].bezeichnung + '</a>';
-          tmp += '</li>';
-        }
-
-        tmp += '<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li></ul>';
-
-
-        $('#Kategorieliste').html(tmp);
-      }).fail(function(jqXHR, statusText, error) {
-        console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
-        alert("Ein Fehler ist aufgetreten");
-      });
-
-
       //AJAX for products-------------------------------------------------------------------------------------------------------------------
       $.ajax({
         url: "http://localhost:8000/api/produkt/vonKategorie/" + $.urlParam('kategorie'),
@@ -88,6 +43,8 @@
         dataType: "json"
       }).done(function(response) {
         console.log(response.daten[0].bruttopreis);
+
+        $('#Ueberschrift').html(response.daten[0].kategorie.bezeichnung);
 
         var tmp = '';
 
