--- a/html/start.html
+++ b/html/start.html
@@ -12,39 +12,12 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-	<script src="../js/navi_footer.js">
+	<script src="../js/navi_footer.js"></script>
 
-	</script>
 </head>
 
 <body>
-	<!--<div class="pointer">
-		<div class="logo" onclick="window.location.href='start.html'">
-			<img src="../img/DeluxeCar.png" />
-		</div>
-	</div>
-	<nav id="Kategorieliste">
-	</nav>-->
-
-
-	<!-- Tipps zu -->
-	<section class="tippszu">
-		<div class="bildle first">
-			<div class="ueber1">
-				<h1><a class="one" href="Verkauf1.html">Handwäsche</a></h1>
-			</div>
-		</div>
-		<div class="bildle">
-			<div class="ueber1">
-				<h1><a class="one" href="Verkauf2.html">Polituren und Poliermaschinen</a></h1>
-			</div>
-		</div>
-		<div class="bildle">
-			<div class="ueber1">
-				<h1><a class="one" href="Verkauf3.html">Versiegelungen und Wachse</a></h1>
-
-			</div>
-		</div>
+	<section class="tippszu" id="Bilder">
 	</section>
 
 	<div id="stleft">
@@ -87,50 +60,29 @@
 			</div>
 		</div>
 	</section>
-
-	<!-- footer -->
-	<div class="footer-basic">
-		<footer>
-			<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
-		</footer>
-	</div>
-
 	<script>
+		$(document).ready(function() {
+			//console.log(JSON.parse(naviDaten)[0]);
+			var naviDaten_temp = JSON.parse(naviDaten);
+			//console.log(naviDaten_temp);
+			var tmp = '';
+			tmp += '<div class="bildle first">';
+			tmp += '<div class="ueber1">';
+			tmp += '<h1><a class="one" href="produktliste.html?kategorie=' + naviDaten_temp[0].id + '">' + naviDaten_temp[0].bezeichnung + '</a></h1>';
+			tmp += '</div>';
+			tmp += '</div>';
+			for (i = 1; i < naviDaten_temp.length; i++) {
+				tmp += '<div class="bildle">';
+				tmp += '<div class="ueber1">';
+				tmp += '<h1><a class="one" href="produktliste.html?kategorie=' + naviDaten_temp[i].id + '">' + naviDaten_temp[i].bezeichnung + '</a></h1>';
+				tmp += '</div>';
+				tmp += '</div>';
+			} //end for
 
-			$(document).ready(function() {
+			$('#Bilder').html(tmp);
 
-				//AJAX for the navbar----------------------------------------------------------------------------------------------------------------
-				$.ajax({
-					url: "http://localhost:8000/api/produktkategorie/alle",
-					method: "get",
-					dataType: "json"
-				}).done(function(response) {
-					//console.log(response.daten[0].name);
-
-					var tmp = '';
-					tmp += '<ul>';
-					tmp += '<li><a class="navi" href="start.html">Startseite</a></li>';
-
-					for (i = 0; i < response.daten.length; i++) {
-						tmp += '<li><a class="navi" href="produktliste.html?kategorie=' + response.daten[i].id + '">' + response.daten[i].bezeichnung + '</a>';
-						tmp += '</li>';
-					}
-
-					tmp += '<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li></ul>';
-
-
-					$('#Kategorieliste').html(tmp);
-				}).fail(function(jqXHR, statusText, error) {
-					console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
-					alert("Ein Fehler ist aufgetreten");
-				});
-
-			});
+		});
 	</script>
-
-
-
-
 </body>
 
 </html>
