--- a/html/Warenkorb.html
+++ b/html/Warenkorb.html
@@ -12,25 +12,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-  <script src="../js/Verkauf1Client.js"></script>
+  <script src="../js/tools.js"></script>
+  <script src="../js/navi_footer.js"></script>
 </head>
 
 <body>
-  <div class="pointer">
-    <div class="logo" onclick="window.location.href='start.html'">
-      <img src="../img/DeluxeCar.png" />
-    </div>
-  </div>
-  <nav>
-    <ul>
-      <li><a class="navi" href="start.html">Startseite</a></li>
-      <li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
-      <li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-      <li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
-      <li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
-    </ul>
-  </nav>
-
   <div class="container wasdienedgeschafthaben">
     <div class="row">
       <table>
@@ -43,14 +29,6 @@
           <th>Mengenpreis</th>
         </tr>
 
-        <tr>
-          <td><a href="GloriaFM10.html" style="color: black;">Gloria FM10</a></td>
-          <td><input step="1" data-step-max="10" type="number" value="3" data-decimals="0" min="0" max="360" class="col-3" /></td>
-          <td>29,99 €</td>
-          <td>89,97 €</td>
-          <td><button class="button">X</button></td>
-    </div>
-    </tr>
     <tr>
       <td><a href="SONAXAutoShampoo.html" style="color: black;">SONAX AutoShampoo</a></td>
       <td><input step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="0" max="360" class="col-3" /></td>
@@ -95,6 +73,7 @@
       <td><a href="order_process.html"><button>Weiter zur </br>Bestellung</button></a></td>
       <td></td>
     </tr>
+    </div>
 
 
     </table>
@@ -104,13 +83,28 @@
   </div>
   </div>
 
+
+  <script>
+    $(document).ready(function() {
+      //AJAX for products-------------------------------------------------------------------------------------------------------------------
+      $.ajax({
+        url: "http://localhost:8000/api/bestellposition/alle",
+        method: "get",
+        dataType: "json"
+      }).done(function(response) {
+
+      }).fail(function(jqXHR, statusText, error) {
+        console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+        alert("Ein Fehler ist aufgetreten");
+      });
+
+
+
+    }); //End document ready
+  </script>
+
+
 </body>
 <hr>
-
-<div class="footer-basic">
-  <footer>
-    <p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
-  </footer>
-</div>
 
 </html>
