--- a/html/Warenkorb.html
+++ b/html/Warenkorb.html
@@ -18,69 +18,11 @@
 
 <body>
   <div class="container wasdienedgeschafthaben">
-    <div class="row">
-      <table>
+    <div class="row" id="tabelle">
 
 
-        <tr>
-          <th>Artikel</th>
-          <th>Menge</th>
-          <th>Stückpreis</th>
-          <th>Mengenpreis</th>
-        </tr>
 
-    <tr>
-      <td><a href="SONAXAutoShampoo.html" style="color: black;">SONAX AutoShampoo</a></td>
-      <td><input step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="0" max="360" class="col-3" /></td>
-      <td>5,79 €</td>
-      <td>5,79 €</td>
-      <td><button class="button">X</button></td>
-
-    </tr>
-    <tr>
-      <td><a href="ALCLEARWaschhandschuh.html" style="color: black;">Menzerna 400</a></td>
-      <td><input step="1" data-step-max="10" type="number" value="2" data-decimals="0" min="0" max="360" class="col-3" /></td>
-      <td>13,99 €</td>
-      <td>27,89 €</td>
-      <td><button class="button">X</button></td>
-    </tr>
-    <tr>
-      <td><a href="ALCLEARWaschhandschuh.html" style="color: black;">SWISSVAX SWIZÖL Autobahn</a></td>
-      <td><input step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="0" max="360" class="col-3" /></td>
-      <td>39,99 €</td>
-      <td>39,99 €</td>
-      <td><button class="button">X</button></td>
-    </tr>
-    <tr></tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td>inkl. 19% MwSt.</td>
-      <td>34,37 €</td>
-    </tr>
-
-    <tr>
-      <td>Gesamtkosten:</td>
-      <td></td>
-      <td></td>
-      <td>180,87 €</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td valigin:center></td>
-      <td></td>
-      <td></td>
-      <td><a href="order_process.html"><button>Weiter zur </br>Bestellung</button></a></td>
-      <td></td>
-    </tr>
     </div>
-
-
-    </table>
-
-
-
-  </div>
   </div>
 
 
@@ -92,6 +34,62 @@
         method: "get",
         dataType: "json"
       }).done(function(response) {
+        var tmp = '';
+        tmp += '<table>';
+        tmp += '<tr>';
+        tmp += '<th>Artikel</th>';
+        tmp += '<th>Menge</th>';
+        tmp += '<th>Stückpreis</th>';
+        tmp += '<th>Mengenpreis</th>';
+        tmp += '</tr>';
+
+        for (i = 0; i < response.daten.length; i++) {
+          tmp += '<tr>';
+          tmp += '<td><a href="produktdetail.html?produkt=' + response.daten[i].produkt.id + '" style="color: black;">' + response.daten[i].produkt.name + '</a></td>';
+          tmp += '<td><input step="1" data-step-max="10" type="number" value="' + response.daten[i].menge + '" data-decimals="0" min="0" max="360" class="col-3" /></td>'
+          tmp += '<td>' + response.daten[i].produkt.bruttopreis.toString().replace(".", ",") + ' €</td>';
+          tmp += '<td>' + Number(response.daten[i].produkt.bruttopreis * response.daten[i].menge).toFixed(2).toString().replace(".", ",") + ' €</td>';
+          tmp += '<td><button class="button">X</button></td>';
+          tmp += '</tr>';
+
+
+        } // end for
+
+
+
+        var Gesamtkosten = 0;
+        var gesamtMWST = 0;
+        for (i = 0; i < response.daten.length; i++) {
+          Gesamtkosten = Gesamtkosten + (response.daten[i].produkt.bruttopreis * response.daten[i].menge);
+        }
+        gesamtMWST = (Gesamtkosten * 19) / 100;
+        tmp += '<tr></tr>';
+        tmp += '<tr>';
+        tmp += '<td></td>';
+        tmp += '<td></td>';
+        tmp += '<td>inkl. 19% MwSt.</td>';
+        tmp += '<td>' + Number(gesamtMWST).toFixed(2).toString().replace(".", ",") + '€</td>';
+        tmp += '</tr>';
+        tmp += '<tr>';
+        tmp += '<td>Gesamtkosten:</td>';
+        tmp += '<td></td>';
+        tmp += '<td></td>';
+        tmp += '<td>' + Number(Gesamtkosten).toFixed(2).toString().replace(".", ",") + ' €</td>';
+        tmp += '<td></td>';
+        tmp += '</tr>';
+        tmp += '<tr>';
+        tmp += '<td valigin:center></td>';
+        tmp += '<td></td>';
+        tmp += '<td></td>';
+        tmp += '<td><a href="order_process.html"><button>Weiter zur </br>Bestellung</button></a></td>';
+        tmp += '<td></td>';
+        tmp += '</tr>';
+        tmp += '</div>';
+        tmp += '</table>';
+
+
+
+        $('#tabelle').html(tmp);
 
       }).fail(function(jqXHR, statusText, error) {
         console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
