--- a/html/produktdetail.html
+++ b/html/produktdetail.html
@@ -9,6 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="stylesheet" href="../css/bootstrap.css">
   <link rel="stylesheet" href="../css/Stylesheet.css">
+  <script src="../js/Verkauf1Client.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -29,15 +30,16 @@
           <td>
             <div class="product-grid2">
               <div id="pics" class="product-image2">
-                
+
               </div>
             </div>
           </td>
           <td id="details" class="großeschrift">
 
           </td>
-          <td class="großeschrift">Stückzahl: <br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> <br><br><button id="addProduct" onclick="Input1()">In den
-              </br>Warenkorb</button></td>
+          <td class="großeschrift" id="Input_Button">
+
+          </td>
 
         </tr>
       </table>
@@ -55,10 +57,30 @@
   <!-- footer -->
 
   <script>
+    var inBestellposition = 0;
+    var urlParam = $.urlParam('produkt');
+
     $(document).ready(function() {
+      var aufLager = '';
+      var input_button = '';
+
+      //AJAX to check and set variable if the product exists already in an order_position-------------------------------------------------------------------------------------------------------------------
+      $.ajax({
+        url: "http://localhost:8000/api/bestellposition/existiert/" + urlParam,
+        method: "get",
+        dataType: "json"
+      }).done(function(response) {
+        console.log(response.daten);
+        inBestellposition = response.daten;
+
+      }).fail(function(jqXHR, statusText, error) {
+        console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+        alert("Ein Fehler ist aufgetreten");
+      });
+
       //AJAX for productdetail-------------------------------------------------------------------------------------------------------------------
       $.ajax({
-        url: "http://localhost:8000/api/produkt/gib/" + $.urlParam('produkt'),
+        url: "http://localhost:8000/api/produkt/gib/" + urlParam,
         method: "get",
         dataType: "json"
       }).done(function(response) {
@@ -74,16 +96,27 @@
           pics += '<img class="pic-2" src ="' + response.daten.bilder[1].bildpfad + '">';
         }
 
-        var aufLager = response.daten.auflager;
+        aufLager = response.daten.auflager;
         if (aufLager) {
-          aufLager = "Auf Lager";
+          var Lager = "Auf Lager";
         } else {
-          aufLager = "Nicht auf Lager"
+          var Lager = "Nicht auf Lager"
         }
-        var details = 'Preis: ' + response.daten.bruttopreis.toString().replace(".", ",") + ' € inkl. MwSt.<br>Status: ' + aufLager + '<br>Versandkostenfrei<br>Lieferzeit: 1-3 Werktage';
+        var details = 'Preis: ' + response.daten.bruttopreis.toString().replace(".", ",") + ' € inkl. MwSt.<br>Status: ' + Lager + '<br>Versandkostenfrei<br>Lieferzeit: 1-3 Werktage';
+
+        var input_button = '';
+        if (aufLager) {
+          input_button = 'Stückzahl:<br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /><br>';
+          input_button += '<br><button id="addProduct" onclick="Input()">In den</br>Warenkorb</button>';
+        } else {
+          input_button = 'Stückzahl:<br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /><br>';
+          input_button += '<br><button id="addProduct" onclick="NotAvail()">In den</br>Warenkorb</button>';
+        }
+
 
         $('#pics').html(pics);
         $('#details').html(details);
+        $('#Input_Button').html(input_button);
         $('#beschreibunggross').html(response.daten.beschreibunggross);
 
 
@@ -94,8 +127,64 @@
 
 
 
-    });
+    }); //document ready end
+
+    function Input() {
+
+      var Input = document.getElementById("userInput").value;
+
+      console.log(inBestellposition);
+
+      if (inBestellposition) {
+
+        var obj = {
+          "menge": Input,
+          "produktid": urlParam
+        };
+
+        $.ajax({
+          url: "http://localhost:8000/api/bestellposition",
+          method: "put",
+          contentType: "application/json",
+          data: JSON.stringify(obj)
+        }).done(function(response) {
+
+        }).fail(function(jqXHR, statusText, error) {
+          console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+          $("#output").html("Ein Fehler ist aufgetreten");
+        });
+
+        alert("Der Warenkorb wurde erfolgreich abgeändert!");
+        window.location.reload(true);
+
+
+      } else {
+
+        var obj = {
+          "produktid": urlParam,
+          "menge": Input
+        };
+
+        $.ajax({
+          url: "http://localhost:8000/api/bestellposition",
+          method: "post",
+          contentType: "application/json",
+          data: JSON.stringify(obj)
+        }).done(function(response) {
+
+        }).fail(function(jqXHR, statusText, error) {
+          console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+          $("#output").html("Ein Fehler ist aufgetreten");
+        });
+
+        alert("Das Produkt wurde erfolgreich zum Warenkorb hinzugefügt !");
+        window.location.reload(true);
+
+      }
+
+    }
   </script>
+
 </body>
 
 </html>
